--- a/RentACarCompany/templates/clientAccountPage.html
+++ b/RentACarCompany/templates/clientAccountPage.html
@@ -11,8 +11,9 @@
     <div class="main">
         <div class="container">
             <div class="row justify-content-center">
+                <h1 class="pt-5">Главное меню</h1>
                 <div class="d-flex menu pt-5">
-                    <button type="button" class="btn btn-primary mx-5">Выбор автомобиля для проката</button>
+                    <a type="button" class="btn btn-primary mx-5" href="/availableCars">Выбор автомобиля для проката</a>
                     <button type="button" class="btn btn-primary mx-5">Просмотр истории проката автомобилей</button>
                     <button type="button" class="btn btn-primary mx-5">Просмотр действующего проката</button>
                     <button type="button" class="btn btn-primary mx-5">Просмотр профиля</button>
