--- a/RentACarCompany/templates/managerAccountPage.html
+++ b/RentACarCompany/templates/managerAccountPage.html
@@ -10,13 +10,14 @@
     <header></header>
     <div class="main">
         <div class="container">
+            <h1 class="text-center pt-5">Главное меню</h1>
             <div class="row justify-content-center">
                 <ul class="nav flex-column py-5">
                     <li class="nav-item">
-                        <a class="btn btn-primary my-3" href="#">Просмотр имеющихся автомобилей</a>
+                        <a class="btn btn-primary my-3" href="/availableCars">Просмотр имеющихся автомобилей</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary my-3" href="#">Просмотр заявок на прокат автомобилей</a>
+                        <a class="btn btn-primary my-3" href="/CarRentalRequests">Просмотр заявок на прокат автомобилей</a>
                     </li>
                     <li class="nav-item">
                         <a class="btn btn-primary my-3" href="#">Просмотр заявок на закрытие проката автомобиля</a>
