--- a/RentACarCompany/templates/masterAccountPage.html
+++ b/RentACarCompany/templates/masterAccountPage.html
@@ -10,6 +10,7 @@
     <header></header>
     <div class="main">
         <div class="container">
+            <h1 class="text-center pt-5">Главное меню</h1>
             <div class="row justify-content-center">
                 <ul class="nav flex-column py-5">
                     <li class="nav-item">
